--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,48 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.d-flex {
+    display: flex;
+}
+  
+.justify-content-center {
+    justify-content: center;
+}
+
+.justify-content-space-between {
+    justify-content: space-between;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.align-center {
+    align-items: center;
+}
+
+.mr-1 {
+    margin-right: 1rem;
+}
+
+.mt-2 {
+    margin-top: 2rem !important;
+}
+
+.pb-2 {
+    padding-bottom: 2rem !important;
+}
+
+.large-font {
+    font-size: 3.5rem !important;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.w-75 {
+    width: 75%;
+}
