Add condominiums table

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div>
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <div class="d-flex justify-content-space-between w-100">
-        <span>SmartPoles Backoffice</span>
+      <div class="d-flex justify-content-space-between align-items-center w-100">
+        <div class="toolbar d-flex align-items-center justify-content-space-between pad-2"><img src="../assets/imgs/smartpole.png" style="width: 60px; height: 60px;" /> 
+          <span>Backoffice</span>
+        </div>
         <div>
           <button mat-button>Condominios</button>
         </div>
