--- a/src/app/pages/list-condominiums-page/list-condominiums-page.component.html
+++ b/src/app/pages/list-condominiums-page/list-condominiums-page.component.html
@@ -1,8 +1,8 @@
 <div class="list-condominium-page d-flex justify-content-center">
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> Id </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        <ng-container matColumnDef="code">
+            <th mat-header-cell *matHeaderCellDef> Código </th>
+            <td mat-cell *matCellDef="let element"> {{element.code}} </td>
         </ng-container>
 
         <ng-container matColumnDef="name">
@@ -14,8 +14,8 @@
             <th mat-header-cell *matHeaderCellDef> <button mat-button color="primary"><mat-icon fontIcon="add"></mat-icon></button> </th>
             <td mat-cell *matCellDef="let element"> 
                 <div>
-                    <button mat-button color="secondary"><mat-icon fontIcon="edit"></mat-icon></button>
-                    <button mat-button color="secondary"><mat-icon fontIcon="delete"></mat-icon></button>
+                    <button mat-button color="secondary" (click)="openEditModal(element.code)"><mat-icon fontIcon="edit"></mat-icon></button>
+                    <button mat-button color="secondary" (click)="openDeleteConfirmation(element.code)"><mat-icon fontIcon="delete"></mat-icon></button>
                 </div>    
             </td>
         </ng-container>
