--- a/src/app/pages/list-condominiums-page/list-condominiums-page.component.html
+++ b/src/app/pages/list-condominiums-page/list-condominiums-page.component.html
@@ -11,10 +11,10 @@
         </ng-container>
 
         <ng-container matColumnDef="add">
-            <th mat-header-cell *matHeaderCellDef> <button mat-button color="primary"><mat-icon fontIcon="add"></mat-icon></button> </th>
+            <th mat-header-cell *matHeaderCellDef> <button mat-button color="primary" (click)="openInsertModal()"><mat-icon fontIcon="add"></mat-icon></button> </th>
             <td mat-cell *matCellDef="let element"> 
                 <div>
-                    <button mat-button color="secondary" (click)="openEditModal(element.code)"><mat-icon fontIcon="edit"></mat-icon></button>
+                    <button mat-button color="secondary" (click)="openEditModal(element.code, element.name)"><mat-icon fontIcon="edit"></mat-icon></button>
                     <button mat-button color="secondary" (click)="openDeleteConfirmation(element.code)"><mat-icon fontIcon="delete"></mat-icon></button>
                 </div>    
             </td>
